FISH-10024 Squash branch Pandrex247/FISH-10024-Use-Zips-EE11-Convert-to-EE10 onto Payara/main
Signed-off-by: Andrew Pielage <pandrex247@hotmail.com>